# doctools

./: pyproject.toml
doctools/: common.py  header.tex  metadata.yml  mkdoc.py  mkmd.py  mkmdpp.py  path.py
