[tool.poetry]
name = "doctools"
version = "0.1.0"
description = ""
authors = ["Bruno Fauth <149593@upf.br>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fzf-but-typed = "^0.2.1"
fire = "^0.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
mkmd = 'doctools.mkmd:main'
mkmdpp = 'doctools.mkmdpp:main'
mkdoc = 'doctools.mkdoc:main'


# https://github.com/python-lsp/pylsp-mypy
[tool.pylsp-mypy]
enabled = true
live_mode = true
dmypy = false
strict = false

# https://docs.astral.sh/ruff/settings
# https://docs.astral.sh/ruff/configuration
[tool.ruff]
builtins = ["print_err"]
line-length = 120

[tool.ruff.lint]
ignore = ["E731"]

[tool.black]
line-length = 120

# https://github.com/google/yapf
[tool.yapf]
based_on_style = 'google'
coalesce_brackets = true
column_limit = 100
# continuation_align_style = "fixed"
continuation_align_style = "valign-right"
# continuation_align_style = "space"
dedent_closing_brackets = false
indent_closing_brackets = false
join_multiple_lines = false
spaces_before_comment = 3
split_arguments_when_comma_terminated = true
split_penalty_after_unary_operator = 9999999

